--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Firebase Option File
+lib/firebase_options.dart
+lib/utills/helper/apiKey.dart
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
