--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,34 @@ dependencies:
 
 
 
+  # icons
   cupertino_icons: ^1.0.8
+  iconsax: ^0.0.8
   dio: ^5.7.0
   http: ^1.2.2
   screenshot: ^3.0.0
   url_launcher: ^6.3.0
   path_provider: ^2.1.4
+  lottie: ^3.1.0
+  # For State Management
+  get: ^4.6.6
+
+  # Native Splash
+  flutter_native_splash: ^2.4.0
+
+
+  # Google Sign In
+  google_sign_in: ^6.2.1
+
+  # Google Gemini Ai Integration
+  google_generative_ai: ^0.4.6
+
+  #Firebase
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+
+
 
 dev_dependencies:
   flutter_test:
@@ -42,7 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/image/
+    - assets/lottie/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
