--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ migrate_working_dir/
 .pub/
 /build/
 
+
+
 # Symbolication related
 app.*.symbols
 
@@ -41,7 +43,9 @@ app.*.map.json
 lib/firebase_options.dart
 lib/utills/helper/apiKey.dart
 
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
 /android/app/release
+android/app/google-services.json
